--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "vue-router": "^4.1.6",
     "vue-tsc": "^1.8.1",
     "xml-formatter": "^3.3.2",
-    "yaml": "^2.2.1"
+    "yaml": "^2.2.1",
+    "v-region": "^3.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.41.0",
