--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "it-tools",
+  "name": "shark-tools",
   "version": "2023.12.21-5ed3693",
   "description": "Collection of handy online tools for developers, with great UX. ",
   "keywords": [
