--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shark-tools",
-  "version": "2023.12.21-5ed3693",
+  "version": "2024-05-20",
   "description": "Collection of handy online tools for developers, with great UX. ",
   "keywords": [
     "productivity",
@@ -62,6 +62,7 @@
     "highlight.js": "^11.7.0",
     "iarna-toml-esm": "^3.0.5",
     "ibantools": "^4.3.3",
+    "js-sql-parser": "^1.6.0",
     "json5": "^2.2.3",
     "jwt-decode": "^3.1.2",
     "libphonenumber-js": "^1.10.28",
@@ -84,13 +85,13 @@
     "unicode-emoji-json": "^0.4.0",
     "unplugin-auto-import": "^0.16.4",
     "uuid": "^9.0.0",
+    "v-region": "^3.0.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.9.1",
     "vue-router": "^4.1.6",
     "vue-tsc": "^1.8.1",
     "xml-formatter": "^3.3.2",
-    "yaml": "^2.2.1",
-    "v-region": "^3.0.0"
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.41.0",
